# pmp-auth-api

./: .dockerignore  .env.example  Cargo.toml  DOCKER.md  Dockerfile  FEATURES_ADDED.md  README.md  config.docker.yaml  config.example.yaml  config.yaml  docker-compose.yml  docker-setup.sh
.github/workflows/: ci.yml
docker/grafana/provisioning/dashboards/: default.yml
docker/ldap/: seed.ldif
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
examples/: 01-oauth2-client-credentials.md  02-oauth2-authorization-code.md  03-openid-connect.md  04-api-key-management.md  05-saml-sso.md  README.md  api_keys.md  oauth2_authorization_code.md  oauth2_client_credentials.md  openid_connect.md
migrations/: 001_initial_schema.sql  README.md
src/: config.rs  lib.rs  main.rs
src/admin/: clients.rs  mod.rs  tenants.rs  users.rs
src/audit/: logger.rs  mod.rs  storage.rs  types.rs
src/auth/: api_keys.rs  device_flow.rs  identity_backend.rs  jwt.rs  mod.rs  oauth2.rs  oauth2_server.rs  oidc.rs  password.rs  saml.rs  strategies.rs  token_introspection.rs
src/certs/: hsm.rs  manager.rs  mod.rs  rotation.rs
src/handlers/: admin.rs  auth.rs  device.rs  health.rs  mod.rs  tenant_auth.rs  user.rs
src/health/: checks.rs  mod.rs  probes.rs
src/ldap/: backend.rs  groups.rs  mod.rs  sync.rs
src/metrics/: collectors.rs  mod.rs  opentelemetry.rs  prometheus_metrics.rs
src/mfa/: backup_codes.rs  mod.rs  totp.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  rate_limit_memory.rs  rate_limit_redis.rs  tenant_auth.rs
src/models/: mod.rs  tenant.rs  user.rs
src/session/: manager.rs  mod.rs  storage.rs  types.rs
src/storage/: memory.rs  mod.rs  postgres.rs
static/: device.html
tests/: multi_tenant_integration_test.rs
